SDKs/wiremock.org/admin/2.30.1/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { GetAdminRequestsUnmatchedNearMissesResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();

sdk.nearMisses.getAdminRequestsUnmatchedNearMisses().then((res: GetAdminRequestsUnmatchedNearMissesResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Near Misses

* `getAdminRequestsUnmatchedNearMisses` - Retrieve near-misses for all unmatched requests
* `postAdminNearMissesRequest` - Find near misses matching specific request
* `postAdminNearMissesRequestPattern` - Find near misses matching request pattern

### Recordings

* `getAdminRecordingsStatus` - Get recording status
* `postAdminRecordingsSnapshot` - Take a snapshot recording
* `postAdminRecordingsStart` - Start recording
* `postAdminRecordingsStop` - Stop recording

### Requests

* `deleteAdminRequests` - Delete all requests in journal
* `deleteAdminRequestsRequestId` - Delete request by ID
* `getAdminRequests` - Get all requests in journal
* `getAdminRequestsUnmatched` - Find unmatched requests
* `getAdminRequestsRequestId` - Get request by ID
* `postAdminRequestsCount` - Count requests by criteria
* `postAdminRequestsFind` - Find requests by criteria
* `postAdminRequestsRemove` - Remove requests by criteria
* `postAdminRequestsRemoveByMetadata` - Delete requests mappings matching metadata
* `postAdminRequestsReset` - Empty the request journal

### Scenarios

* `getAdminScenarios` - Get all scenarios
* `postAdminScenariosReset` - Reset the state of all scenarios

### Stub Mappings

* `deleteAdminMappings` - Delete all stub mappings
* `deleteAdminMappingsStubMappingId` - Delete a stub mapping
* `getAdminMappings` - Get all stub mappings
* `getAdminMappingsStubMappingId` - Get stub mapping by ID
* `postAdminMappings` - Create a new stub mapping
* `postAdminMappingsFindByMetadata` - Find stubs by matching on their metadata
* `postAdminMappingsRemoveByMetadata` - Delete stub mappings matching metadata
* `postAdminMappingsReset` - Reset stub mappings
* `postAdminMappingsSave` - Persist stub mappings
* `putAdminMappingsStubMappingId` - Update a stub mapping

### System

* `postAdminReset` - Reset mappings and request journal
* `postAdminSettings` - Update global settings
* `postAdminShutdown` - Shutdown the WireMock server

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
